refactoring; HexWidget performance optimized

--- a/docs/microhex.conf
+++ b/docs/microhex.conf
@@ -36,6 +36,9 @@
         "header_inactive_text_color": "#808080"
     },
 
+    // if widget should paint block cursor covering entire character in edit mode.
+    "hexwidget.block_cursor": false,
+
     // IntegerEdit is a widget that used to edit values with different bases (for example, it is
     // used in file loading dialog to edit range). "integeredit" group contains values related to
     // this widget.
