AddBookmarkDialog impoved; settings for bookmarks

--- a/docs/microhex.conf
+++ b/docs/microhex.conf
@@ -39,6 +39,14 @@
     // if widget should paint block cursor covering entire character in edit mode.
     "hexwidget.block_cursor": false,
 
+    // widget adds alpha component to all color used to highlight cells. This settings allows to tune alpha value.
+    "hexwidget.highlight_alpha": 150,
+
+    // when application asks user for color, it can use random color as default value. This setting determines
+    // how close this random color can be to already used ones. This value can vary from 0 (any color acceptable)
+    // to ~1600 (space diagonal of cube with a = 256)
+    "hexwidget.random_color_distance": 100,
+
     // IntegerEdit is a widget that used to edit values with different bases (for example, it is
     // used in file loading dialog to edit range). "integeredit" group contains values related to
     // this widget.
