--- a/docs/microhex.conf
+++ b/docs/microhex.conf
@@ -31,7 +31,7 @@
         "cursor_background_color": "#643c3c:64", // used only if block cursor is enabled
         "cursor_border_color": "#000000",
         "modified_text_color": "#ff0000",
-        "broken_text_color": " "#a0a0a4",
+        "broken_text_color": "#a0a0a4",
         "header_background_color": "#fafaf5",
         "header_text_color": "#000000",
         "header_inactive_text_color": "#808080"
