fixed: bugs with editing in insert mode; add auto edit mode option

--- a/docs/microhex.conf
+++ b/docs/microhex.conf
@@ -27,6 +27,13 @@
     // to ~1600 (space diagonal of cube with a = 256)
     "hexwidget.random_color_distance": 100,
 
+    // name of theme that will be used by HexWidget
+    "hexwidget.theme": "",
+
+    // if automatic edit mode is disabled, you should press F2 or double-click cell to enter edit mode. If
+    // enabled, any text input will cause edit mode to be automatically started.
+    "hexwidget.auto_edit_mode": true,
+
     // IntegerEdit is a widget that used to edit values with different bases (for example, it is
     // used in file loading dialog to edit range). "integeredit" group contains values related to
     // this widget.
